--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
 
           <div id="teaser">  
 
-            <div class="col-sm-6 col-md-3 icon feature"><img src="images/icon_57707/icon_57707.png" alt="Bol de glace :D" width="90"> 
+            <div class="col-sm-6 col-md-3 icon feature"><img src="https://cloud.githubusercontent.com/assets/8151246/4102387/367a3932-3127-11e4-8462-18dcc17f736a.png" alt="Bol de glace :D" width="90"> 
               <br> <br>
               Choisissez jusqu'à trois parfums
               dans notre catalogue de <strong>1000</strong> glaces maison.</div>
 
-            <div class="col-sm-6 col-md-3 icon feature"><img src="images/icon_29388/icon_29388.png" alt="Je suis là" width="90"> 
+            <div class="col-sm-6 col-md-3 icon feature"><img src="https://cloud.githubusercontent.com/assets/8151246/4102386/17f261ec-3127-11e4-9e4d-b533d2b7c58d.png" alt="Je suis là" width="90"> 
               <br> <br>
               L'application vous <strong>géolocalise</strong> automatiquement et vous indique le temps d'attente estimé.</div>
 
-            <div class="col-sm-6 col-md-3 icon feature"><img src="images/icon_24755/icon_24755.png" alt="Le glacieeeeer!!" width="90"> 
+            <div class="col-sm-6 col-md-3 icon feature"><img src="https://cloud.githubusercontent.com/assets/8151246/4102385/032aee28-3127-11e4-9f87-6a4288e0fd74.png" alt="Le glacieeeeer!!" width="90"> 
               <br> <br>
               Un de nos supers livreurs fonce pour vous apporter votre glace,
               qui sera <strong> préparée juste à temps</strong>.</div>
 
-            <div class="col-sm-6 col-md-3 icon feature"><img src="images/icon_17805/icon_17805.png" alt="Moneeeeyyy" width="90"> 
+            <div class="col-sm-6 col-md-3 icon feature"><img src="https://cloud.githubusercontent.com/assets/8151246/4102384/d05a4af2-3126-11e4-817c-fd215ff27714.png" alt="Moneeeeyyy" width="90"> 
               <br> <br>
               Pas de monnaie ? Pas de problème, le paiement est <strong>automatiquement</strong> débité sur votre carte bancaire.</div>
 
