--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand navtext" href="#">
+              <a class="navbar-brand navtext" href="index.html">
                 ICE ME </a>
             </div>
 
@@ -48,20 +48,30 @@
                 <li><a href="#">Link</a></li>
               </ul> -->
               <ul class="nav navbar-nav navbar-right">
+
                 <li>
-                  <a href="#" class="navtext">Une glace, maintenant !</a>
+                  <a href="commande.html" class="navtext">Une glace, maintenant !</a>
                 </li>
+
+                <li>
+                  <a href="parfums.html" class="navtext">Nos parfums</a>
+                </li>
+
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle navtext" data-toggle="dropdown">Suivez-nous ! <span class="caret"></span></a>
+
                   <ul class="dropdown-menu " role="menu">
-                    <li><a href="#"> <i class="fa fa-twitter-square navtext"></i> Twitter</a></li>
-                    <li><a href="#"> <i class="fa fa-facebook-square navtext"></i> Facebook</a></li>
+                    <li><a href="https://twitter.com/iceme"> <i class="fa fa-twitter-square navtext"></i> Twitter</a></li>
+                    <li><a href="https://facebook.com/iceme"> <i class="fa fa-facebook-square navtext"></i> Facebook</a></li>
                   </ul>
+
                 </li>
+
               </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
+
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
 
         <br>
         <br>
