--- a/commande.html
+++ b/commande.html
@@ -91,7 +91,7 @@
                 action="https://lucielc.wufoo.com/forms/z10trvv80yaulmi/#public">
             
           <header id="header" class="info">
-          <h2><center>Choisissez votre parfum</center></h2>
+          <h2 text-align:center>Choisissez votre parfum</h2>
           </header>
 
           <ul>
