Add links for perfums

--- a/parfums.html
+++ b/parfums.html
@@ -95,7 +95,7 @@
       <!-- Page 2 -->
       <div class="item"> 
         <div class="carousel-page">
-          <img src="images/parfums2/berry.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120712/8d7c1776-32b4-11e4-8179-4d78400169c8.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;" /></div> 
         <div class="carousel-caption">Mûres</div>
       </div>  
@@ -103,7 +103,7 @@
       <!-- Page 3 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/chocolate.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120717/92f81d30-32b4-11e4-9eb8-66d763a14f9c.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Chocolat</div>
@@ -112,7 +112,7 @@
       <!-- Page 4 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/cookies.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120722/9a0cee3e-32b4-11e4-9bbc-5d8f5ceddb5a.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Cookie</div>
@@ -121,7 +121,7 @@
       <!-- Page 5 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/banana.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120710/887ec8c2-32b4-11e4-9508-1028d71dab58.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Banane</div>
@@ -130,7 +130,7 @@
       <!-- Page 6 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/peanut.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120725/a08cd526-32b4-11e4-9698-976b5a10014d.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Cacahuète</div>
@@ -139,7 +139,7 @@
       <!-- Page 7 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/strawberry.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120728/a54b0dc6-32b4-11e4-8d1d-b1c4d2f12a81.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Fraise</div>
@@ -148,7 +148,7 @@
       <!-- Page 8 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="images/parfums2/white-chocolate.jpg" class="img-responsive img-rounded" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120730/aaa54f66-32b4-11e4-9dfc-341faa66943e.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Chocolat blanc</div>
