Add <div> id form

--- a/parfums.html
+++ b/parfums.html
@@ -72,6 +72,8 @@
         </nav>
 
 
+  <div id="form">
+  
     <div id="my_carousel" class="carousel slide" data-ride="carousel">
 
       <!-- Bulles -->
@@ -164,7 +166,9 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
-
+  
+    
+  </div> <!--form-->
 
      <footer>
 
