--- a/parfums.html
+++ b/parfums.html
@@ -13,7 +13,7 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
@@ -72,8 +72,6 @@
         </nav>
 
 
-  <div id="form">
-  
     <div id="my_carousel" class="carousel slide" data-ride="carousel">
 
       <!-- Bulles -->
@@ -89,7 +87,7 @@
       <!-- Page 1 -->
       <div class="item active">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120706/814367e8-32b4-11e4-83f9-3f3de172b42b.jpg" class="img-responsive" height="420px" style="margin:0px auto;" />
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120706/814367e8-32b4-11e4-83f9-3f3de172b42b.jpg" class="img-responsive" style="margin:0px auto;" />
         </div> 
           <div class="carousel-caption">Agrumes</div>
       </div>   
@@ -97,7 +95,7 @@
       <!-- Page 2 -->
       <div class="item"> 
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120712/8d7c1776-32b4-11e4-8179-4d78400169c8.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120712/8d7c1776-32b4-11e4-8179-4d78400169c8.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;" /></div> 
         <div class="carousel-caption">Mûres</div>
       </div>  
@@ -105,7 +103,7 @@
       <!-- Page 3 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120717/92f81d30-32b4-11e4-9eb8-66d763a14f9c.jpg" class="img-responsive img-rounded" height="420" 
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120717/92f81d30-32b4-11e4-9eb8-66d763a14f9c.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Chocolat</div>
@@ -114,7 +112,7 @@
       <!-- Page 4 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120722/9a0cee3e-32b4-11e4-9bbc-5d8f5ceddb5a.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120722/9a0cee3e-32b4-11e4-9bbc-5d8f5ceddb5a.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Cookie</div>
@@ -123,7 +121,7 @@
       <!-- Page 5 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120710/887ec8c2-32b4-11e4-9508-1028d71dab58.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120710/887ec8c2-32b4-11e4-9508-1028d71dab58.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Banane</div>
@@ -132,7 +130,7 @@
       <!-- Page 6 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120725/a08cd526-32b4-11e4-9698-976b5a10014d.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120725/a08cd526-32b4-11e4-9698-976b5a10014d.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Cacahuète</div>
@@ -141,7 +139,7 @@
       <!-- Page 7 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120728/a54b0dc6-32b4-11e4-8d1d-b1c4d2f12a81.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120728/a54b0dc6-32b4-11e4-8d1d-b1c4d2f12a81.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Fraise</div>
@@ -150,7 +148,7 @@
       <!-- Page 8 -->
       <div class="item">  
         <div class="carousel-page">
-          <img src="https://cloud.githubusercontent.com/assets/8151246/4120730/aaa54f66-32b4-11e4-9dfc-341faa66943e.jpg" class="img-responsive img-rounded" height="420"
+          <img src="https://cloud.githubusercontent.com/assets/8151246/4120730/aaa54f66-32b4-11e4-9dfc-341faa66943e.jpg" class="img-responsive img-rounded" 
         style="margin:0px auto;max-height:100%;"  />
         </div>  
         <div class="carousel-caption">Chocolat blanc</div>
@@ -166,9 +164,7 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
-  
-    
-  </div> <!--form-->
+
 
      <footer>
 
