Add <a> to button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h2>MAINTENANT TOUT DE SUITE</h2>
 
       <div style="text-align:center"><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#orderForm">
-      Je veux une glace
+      <a href="commande.html">Je veux une glace</a>
       </button></div>
 
     </div> <!--h-->
