--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <h1>DEGUSTEZ UNE GLACE</h1>
       <h2>MAINTENANT TOUT DE SUITE</h2>
 
-      <div style="text-align:center"><a href="commande.html"><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#orderForm">
+      <a href="commande.html"><div style="text-align:center"><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#orderForm">
       Je veux une glace
-      </button></a></div>
+      </button></div></a>
 
     </div> <!--h-->
 
